cmake_minimum_required(VERSION 3.16)
project(webui)
set(CMAKE_EXE_LINKER_FLAGS "-static")
if (WIN32)
    #set(CMAKE_C_COMPILER "C:/Users/Nook/Videos/w64devkit/bin/gcc.exe")
    #set(CMAKE_CXX_COMPILER "C:/Users/Nook/Videos/w64devkit/bin/g++.exe")
    #set(CMAKE_C_FLAGS -gdwarf-3)
    #set(CMAKE_CXX_FLAGS -gdwarf-3)
    #set(LIBNAME "qwtplot3d.dll")
elseif (UNIX)
    ##set(CMAKE_BUILD_TYPE "Debug")
    set_target_properties(${TARGET} PROPERTIES COMPILE_FLAGS "-pthread" LINK_FLAGS "-pthread")
    set(BINDIR ${CMAKE_BINARY_DIR})
    #set(LIBNAME "libqwtplot3d.so")
    link_libraries(pthread)
endif()
if (CMAKE_BUILD_TYPE AND (CMAKE_BUILD_TYPE STREQUAL "Debug"))
    set(LIBDIR ${PROJECT_SOURCE_DIR}/lib/debug)
    set(BINDIR ${CMAKE_BINARY_DIR}/bind)
else ()
    set(LIBDIR ${PROJECT_SOURCE_DIR}/lib/release)
    set(BINDIR ${CMAKE_BINARY_DIR}/bin)
endif ()
set(CMAKE_C_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BINDIR})
set(THREADS_PREFER_PTHREAD_FLAG ON)
file(GLOB HEADS ${CMAKE_SOURCE_DIR}/src/*.h)
file(GLOB SOURS ${CMAKE_SOURCE_DIR}/src/*.cpp)
#file(GLOB SOURS ${CMAKE_SOURCE_DIR}/src/*.c)
#file(COPY ${LIBDIR}/${LIBNAME} DESTINATION ${BINDIR})
find_package(Threads REQUIRED)
add_executable(${PROJECT_NAME} ${HEADS} ${SOURS})
target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/include)
target_link_directories(${PROJECT_NAME} PRIVATE ${LIBDIR})
if (WIN32)
    #target_link_libraries(${PROJECT_NAME} webui-2-static ws2_32 ole32 Threads::Threads)
    target_link_libraries(${PROJECT_NAME} ws2_32 ole32 Threads::Threads)
    set_property(TARGET ${PROJECT_NAME} PROPERTY C_STANDARD 17)
    #add_compile_definitions(NOMINMAX)
    add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
    add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
endif ()